<resources>
    <string name="app_name">Namma Karnataka</string>
    <string name="rateus">Rate Us</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_splasher">SplasherActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="place">Place</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="season">Best Season</string>
    <string name="nearby">Nearby Places</string>
    <string name="transport">Transport</string>
    <string name="additional">Additional Info</string>
    <string name="comments">Leave your experience here</string>
    <string name="view_on_maps">VIEW ON MAPS</string>
    <string name="loading">Loading</string>

    <string-array name="category">
        <item>- -</item>
        <item>Temples</item>
        <item>Hill Stations</item>
        <item>Waterfalls</item>
        <item>Dams</item>
        <item>Treking places</item>
        <item>Beaches</item>
        <item>Heritage</item>
        <item>Others</item>
    </string-array>
    <string name="title_activity_my_location">MyLocation</string>
    <string name="title_activity_test">test</string>
    <string name="title_activity_news">newsActivity</string>

    <string name="admob_interstitial_id">ca-app-pub-9681985190789334/5716706606</string>

    <string name="title_activity_about_dev">aboutDev</string>

    <string name="display_text">~Namma Karnataka Tourism, Travel guide

Karnataka is a tapestry of colours, cultures, flavours, landscapes, timelessness and heart stopping beauty. It’s a place where vibrant worlds seamlessly meld into one another every few hundred kilometers.

Namma Karnataka is must have app for all backpackers, travellers, piligrims and vacationers. Namma Karnataka tourism app contains exotic lists of tourist places of all districts of Karnataka state. Everything needed to organise a trip is available right at your fingertips. With Namma Karnataka one can inhale the history and beauty that resides in Karnataka land and its nature.

Dive deep into the land with vibrant worlds with Namma Karnataka.

Namma Karnataka A Travel guide cum tourism app.</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_my_profile">myProfile</string>
</resources>
