<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="#212121"
        android:orientation="vertical" />
    <com.daimajia.slider.library.SliderLayout
        android:id="@+id/layout_images"
        android:layout_width="match_parent"
        android:layout_height="260dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="#212121"
        android:orientation="vertical" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardElevation="4dp">

        <TextView
            android:padding="10dp"
            android:layout_height="wrap_content"
            android:id="@+id/place_textView"
            android:layout_width="wrap_content"
            android:textAllCaps="true"
            android:textSize="26sp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/defTextColor"
            />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <pttextview.widget.PTTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/description"
                android:textColor="@color/defTextColor"
                app:textWeight="bold"
                android:textAllCaps="true"
                android:textSize="18sp" />

            <View style="@style/Divider" />

            <pttextview.widget.PTTextView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/description_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:padding="6dp"
                android:textColor="@color/defTextColor"
                android:textSize="16sp" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <pttextview.widget.PTTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/location"
                android:textAllCaps="true"
                app:textWeight="bold"
                android:textColor="@color/defTextColor"
                android:textSize="18sp" />

            <View style="@style/Divider" />

            <pttextview.widget.PTTextView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/location_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:padding="6dp"
                android:textSize="16sp"
                android:textColor="@color/defTextColor" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <pttextview.widget.PTTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textAllCaps="true"
                android:text="@string/season"
                android:textColor="@color/defTextColor"
                app:textWeight="bold"
                android:textSize="18sp" />

            <View style="@style/Divider" />

            <pttextview.widget.PTTextView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/season_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:padding="6dp"
                android:textSize="16sp"
                android:textColor="@color/defTextColor" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <pttextview.widget.PTTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textAllCaps="true"
                app:textWeight="bold"
                android:text="@string/additional"
                android:textColor="@color/defTextColor"
                android:textSize="18sp" />

            <View style="@style/Divider" />

            <pttextview.widget.PTTextView
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/additionalInformation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:padding="6dp"
                android:textSize="16sp"
                android:textColor="@color/defTextColor" />


        </LinearLayout>
    </android.support.v7.widget.CardView>


    <pttextview.widget.PTTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="8dp"
        android:text="@string/nearby"
        android:textAllCaps="true"
        android:textColor="@color/defTextColor"
        app:textWeight="bold"
        android:textSize="18sp" />

    <View style="@style/Divider" />

</LinearLayout>