<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/app_background"

    android:fillViewport="true">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:stretchColumns="1"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="#212121"
        android:orientation="vertical" />
    <com.daimajia.slider.library.SliderLayout
        android:id="@+id/noti_images"
        android:layout_width="match_parent"
        android:layout_height="260dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="#212121"
        android:orientation="vertical" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardElevation="4dp">

        <smartAmigos.com.nammakarnataka.myTextView
            android:padding="10dp"
            android:layout_height="wrap_content"
            android:id="@+id/noti_placename"
            android:layout_width="wrap_content"
            android:textAllCaps="true"
            android:textSize="26sp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/defTextColor"
            />
    </android.support.v7.widget.CardView>



    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <smartAmigos.com.nammakarnataka.myTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/description"
                android:textColor="@color/defTextColor"
                app:textWeight="bold"
                android:textAllCaps="true"
                android:textSize="18sp" />

            <View style="@style/Divider" />

            <smartAmigos.com.nammakarnataka.readingFont
                android:id="@+id/noti_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:textSize="16sp" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <smartAmigos.com.nammakarnataka.myTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/location"
                android:textAllCaps="true"
                app:textWeight="bold"
                android:textColor="@color/defTextColor"
                android:textSize="18sp" />

            <View style="@style/Divider" />
            <smartAmigos.com.nammakarnataka.readingFont
                android:id="@+id/noti_district"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:textSize="16sp" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <smartAmigos.com.nammakarnataka.myTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textAllCaps="true"
                android:text="@string/season"
                android:textColor="@color/defTextColor"
                app:textWeight="bold"
                android:textSize="18sp" />

            <View style="@style/Divider" />
            <smartAmigos.com.nammakarnataka.readingFont
                android:id="@+id/noti_beastseason"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:textSize="16sp" />
        </LinearLayout>
    </android.support.v7.widget.CardView>



    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <smartAmigos.com.nammakarnataka.myTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textAllCaps="true"
                app:textWeight="bold"
                android:text="@string/additional"
                android:textColor="@color/defTextColor"
                android:textSize="18sp" />

            <View style="@style/Divider" />


            <smartAmigos.com.nammakarnataka.readingFont
                android:id="@+id/noti_additionalInformation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:textSize="16sp" />


        </LinearLayout>
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <smartAmigos.com.nammakarnataka.myTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textAllCaps="true"
                app:textWeight="bold"
                android:text="NEARBY PLACES"
                android:textColor="@color/defTextColor"
                android:textSize="18sp" />

            <View style="@style/Divider" />

            <smartAmigos.com.nammakarnataka.readingFont
                android:id="@+id/noti_nearby"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:textSize="16sp" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="40dp" />

        <Button
            android:id="@+id/noti_gmapButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textColor="@color/colorWhite"
            android:background="@drawable/rounded_button"
            android:text="@string/view_on_maps" />

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />


    </TableLayout>

    </ScrollView>
